--- a/index.html
+++ b/index.html
@@ -105,16 +105,7 @@
         </p>
       </div>
       <div class="about-work">
-        <h1 class="work-h1">Wrist Tattoo</h1>
-        <img class="work-img" src="images/wrisk.jpg" alt="" />
-        <p class="work-p">
-          Wrist tattoos are discreet yet significant, often representing
-          personal mantras, symbols, or reminders, adding flair to everyday
-          gestures.
-        </p>
-      </div>
-      <div class="about-work">
-        <h1 class="work-h1">Neck Tattoo</h1>
+        <h1 class="work-h1 work-h1-last">Neck Tattoo</h1>
         <img class="work-img" src="images/neck.png" alt="" />
         <p class="work-p">
           Neck tattoos are bold statements, often showcasing meaningful symbols
