--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </p>
     </section>
     <section class="map_container">
-      <h1>Where to find us on map</h1>
+      <h1 class="h1-finding">Where to find us on map</h1>
       <button class="map-btn">Dark/ligth Mode</button>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1522.7755836357128!2d23.936053327794898!3d54.909981784759424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e7189fef7774d7%3A0x824d1fa224c38a80!2sJSC%20%22Repair%20Center%22!5e0!3m2!1sen!2slt!4v1711133181504!5m2!1sen!2slt"
